# crop-exe

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
.github/workflows/: build.yml
